tests/paczka1/small_fuzzy/28774573.err
Error in line 11: ZvCmvI A202 13,4
Error in line 12: 0MsN A650 36,3
